--- a/src/app/modals/confirm-modal/confirm-modal.component.html
+++ b/src/app/modals/confirm-modal/confirm-modal.component.html
@@ -1,18 +1,34 @@
-<h1 mat-dialog-title align="center">{{ data.title }}</h1>
+<div class="confirm-modal">
+  <h1 class="modal-title">{{ data.title }}</h1>
 
-<mat-dialog-content align="center">
-  <p>{{ data.message }}</p>
-</mat-dialog-content>
+  <div class="modal-content">
+    <!-- Contextual Icon -->
+    <div class="modal-icon" [class.info]="!isDestructiveAction()">
+      <mat-icon [svgIcon]="getModalIcon()" aria-hidden="true"></mat-icon>
+    </div>
+    
+    <p class="modal-message">{{ data.message }}</p>
+  </div>
 
-<mat-dialog-actions align="center">
-  @if (data.cancelText) {
-    <button mat-raised-button color="primary"
-    (click)="onCancel()">{{ data.cancelText || "No" }}</button>
-  }
-  @if (data.confirmText) {
-    <button mat-raised-button color="warn"
-      (click)="onConfirm()">
-      {{ data.confirmText || "Yes" }}
-    </button>
-  }
-</mat-dialog-actions>
+  <div class="modal-actions">
+    @if (data.cancelText) {
+      <button 
+        mat-raised-button
+        class="cancel-btn"
+        (click)="onCancel()"
+        [attr.aria-label]="'Cancel: ' + (data.cancelText || 'No')">
+        {{ data.cancelText || "Cancel" }}
+      </button>
+    }
+    
+    @if (data.confirmText) {
+      <button 
+        mat-raised-button
+        [class]="getConfirmButtonClass()"
+        (click)="onConfirm()"
+        [attr.aria-label]="'Confirm: ' + (data.confirmText || 'Yes')">
+        {{ data.confirmText || "Confirm" }}
+      </button>
+    }
+  </div>
+</div>
