--- a/src/app/modals/input-modal/input-modal.component.html
+++ b/src/app/modals/input-modal/input-modal.component.html
@@ -1,66 +1,116 @@
 <div class="input-modal">
-  <!-- 🔹 Modal Header -->
+  <!-- Modal Header -->
   <div class="modal-header" data-tauri-drag-region>
-    <button>
+    <button mat-icon-button aria-hidden="true">
       <mat-icon svgIcon="question"></mat-icon>
     </button>
-    <p>{{ data.title }}</p>
-    <button (click)="close()">
-      <mat-icon svgIcon="circle-xmark"></mat-icon>
+    <h3>{{ data.title }}</h3>
+    <button mat-icon-button (click)="close()" aria-label="Close input dialog">
+      <mat-icon svgIcon="close"></mat-icon>
     </button>
   </div>
 
-  <div mat-dialog-content class="modal-content">
+  <div class="modal-content">
+    <!-- Description -->
     <p>{{ data.description }}</p>
-    @for (field of data.fields; track field.name) {
-      @switch (field.type) {
-        <!-- Regular input types -->
+
+    <!-- Form Fields -->
+    <div class="form-fields">
+      @for (field of data.fields; track field.name) {
+      <div class="form-field" [class.field-error]="isFieldInvalid(field)" [class.field-valid]="isFieldValid(field)">
+
+        @switch (field.type) {
+        <!-- Text Input -->
         @case ('text') {
-          <mat-form-field appearance="fill" style="width: 100%;">
-            <mat-label>{{ field.label }}</mat-label>
-            <input matInput [(ngModel)]="formData[field.name]" [required]="field.required" />
-          </mat-form-field>
+        <mat-form-field appearance="fill" style="width: 100%;">
+          <mat-label>{{ field.label }}</mat-label>
+          <input matInput [(ngModel)]="formData[field.name]" [required]="field.required"
+            [placeholder]="getFieldPlaceholder(field)" (blur)="validateField(field)"
+            [attr.aria-label]="field.label + (field.required ? ' (required)' : '')" />
+          @if (isFieldInvalid(field) && fieldErrors[field.name]) {
+          <mat-error class="field-error-message" role="alert">
+            {{ fieldErrors[field.name] }}
+          </mat-error>
+          }
+        </mat-form-field>
         }
+
+        <!-- Password Input -->
         @case ('password') {
-          <mat-form-field appearance="fill" style="width: 100%;">
-            <mat-label>{{ field.label }}</mat-label>
-            <input matInput [(ngModel)]="formData[field.name]" type="password" [required]="field.required" />
-          </mat-form-field>
+        <mat-form-field appearance="fill" style="width: 100%;">
+          <mat-label>{{ field.label }}</mat-label>
+          <input matInput [(ngModel)]="formData[field.name]" [type]="showPassword ? 'text' : 'password'"
+            [required]="field.required" [placeholder]="getFieldPlaceholder(field)" (blur)="validateField(field)"
+            [attr.aria-label]="field.label + (field.required ? ' (required)' : '')" />
+          <button mat-icon-button matSuffix (click)="togglePasswordVisibility()"
+            [attr.aria-label]="showPassword ? 'Hide password' : 'Show password'">
+            <mat-icon [svgIcon]="showPassword ? 'eye-slash' : 'eye'"></mat-icon>
+          </button>
+        </mat-form-field>
         }
+
+        <!-- Number Input -->
         @case ('number') {
-          <mat-form-field appearance="fill" style="width: 100%;">
-            <mat-label>{{ field.label }}</mat-label>
-            <input matInput type="number" [(ngModel)]="formData[field.name]" [required]="field.required" />
-          </mat-form-field>
+        <mat-form-field appearance="fill" style="width: 100%;">
+          <mat-label>{{ field.label }}</mat-label>
+          <input matInput type="number" [(ngModel)]="formData[field.name]" [required]="field.required"
+            [placeholder]="getFieldPlaceholder(field)" (blur)="validateField(field)"
+            [attr.aria-label]="field.label + (field.required ? ' (required)' : '')" />
+          @if (isFieldInvalid(field) && fieldErrors[field.name]) {
+          <mat-error class="field-error-message" role="alert">
+            {{ fieldErrors[field.name] }}
+          </mat-error>
+          }
+        </mat-form-field>
         }
+
+        <!-- Select Dropdown -->
         @case ('select') {
-          <mat-form-field appearance="fill" style="width: 100%;">
-            <mat-label>{{ field.label }}</mat-label>
-            <mat-select [(ngModel)]="formData[field.name]" [required]="field.required">
-              @for (option of field.options; track option) {
-                <mat-option [value]="option">
-                  {{ option }}
-                </mat-option>
-              }
-            </mat-select>
-          </mat-form-field>
+        <mat-form-field appearance="fill" style="width: 100%;">
+          <mat-label>{{ field.label }}</mat-label>
+          <mat-select [(ngModel)]="formData[field.name]" [required]="field.required"
+            (selectionChange)="validateField(field)"
+            [attr.aria-label]="field.label + (field.required ? ' (required)' : '')">
+            @for (option of field.options; track option) {
+            <mat-option [value]="option">
+              {{ option }}
+            </mat-option>
+            }
+          </mat-select>
+          @if (isFieldInvalid(field) && fieldErrors[field.name]) {
+          <mat-error class="field-error-message" role="alert">
+            {{ fieldErrors[field.name] }}
+          </mat-error>
+          }
+        </mat-form-field>
         }
-        <!-- Folder select input -->
+
+        <!-- Folder Selector -->
         @case ('folder') {
+        <div class="form-field folder-field">
           <mat-form-field appearance="fill" style="width: 100%;">
             <mat-label>{{ field.label }}</mat-label>
-            <input matInput [value]="formData[field.name]" placeholder="Select a folder..." readonly />
-            <button mat-icon-button matSuffix type="button" (click)="selectFolder()">
-              <mat-icon svgIcon="folder"></mat-icon>
-            </button>
+              <input matInput [value]="formData[field.name] || ''" [placeholder]="getFieldPlaceholder(field)" readonly
+                [required]="field.required"
+                [attr.aria-label]="field.label + (field.required ? ' (required)' : '') + ' - Click folder button to select'" />
+              <button mat-icon-button matSuffix (click)="selectFolder(field)"
+                [attr.aria-label]="'Select folder for ' + field.label">
+                <mat-icon svgIcon="folder"></mat-icon>
+              </button>
           </mat-form-field>
+        </div>
         }
+        }
+      </div>
       }
-    }
-    <div mat-dialog-actions align="center">
-      <button mat-raised-button color="primary" (click)="confirm()" [disabled]="!isFormValid()">
-        <mat-icon svgIcon="circle-check"></mat-icon>
-        <span>Confirm</span>
+    </div>
+
+    <!-- Action Buttons -->
+    <div class="modal-actions">
+      <button mat-raised-button color="primary" (click)="confirm()" [disabled]="!isFormValid()"
+        [attr.aria-label]="isFormValid() ? 'Confirm and submit form' : 'Form is incomplete - please fill required fields'">
+        <mat-icon svgIcon="circle-check" aria-hidden="true"></mat-icon>
+        Confirm
       </button>
     </div>
   </div>
